--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,136 @@
-.App {
+.mainContainer {
+}
+
+.content {
+  margin: 50px auto;
+  max-width: 600px;
+  align-content: center;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: row wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.content__container {
+  flex: 0 0 50%;
+  display: flex;
+  flex-flow: column;
+  height: 200px;
 }
 
-@keyframes App-logo-spin {
-  from {
+.content__container {
+  flex: 0 0 50%;
+  display: flex;
+  flex-flow: column;
+  height: 200px;
+}
+
+.content__container .buttons .field-wrapper {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.content__container .buttons {
+  display: flex;
+  justify-content: space-around;
+  width: 250px;
+  margin: 0 auto;
+  line-height: 30px;
+  height: 30px;
+}
+
+.content__container .buttons .button-vote {
+  border-radius: 20px;
+  cursor: pointer;
+  border: none;
+  width: 100px;
+}
+
+.content__container .buttons .button-vote:hover {
+  font-weight: bolder;
+}
+
+.cat {
+  background-color: lightpink;
+}
+
+.dog {
+  background-color: bisque;
+}
+
+.content__container .buttons .field-wrapper {
+  width: 100px;
+  justify-content: space-around;
+}
+
+@media screen and (max-width: 600px) {
+  .content__container {
+    flex: 0 0 100%;
+  }
+}
+
+.loader-wrapper {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.loader-wrapper .loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 2s linear infinite;
+  display: block;
+  margin: 0 auto;
+}
+
+.loader-wrapper .text {
+  text-align: center;
+  margin-top: 10px;
+}
+
+@keyframes spin {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
+  }
+}
+
+.alert.success {
+  background-color: #4caf50;
+}
+.alert {
+  background-color: #f44336;
+  color: white;
+  opacity: 0;
+  transition: opacity 0.6s;
+  padding: 10px;
+  border-radius: 3px;
+  margin: 0 auto;
+  width: 150px;
+  -webkit-animation: fadeInOut 2s;
+  animation: fadeInOut 2s;
+}
+
+.alert-wrapper {
+  margin-top: 10px;
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 0;
+  }
+  16% {
+    opacity: 1;
+  }
+  84% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
